added metadata & delete examiner
